[tool.poetry]
name = "yjconv"
version = "0.1.0"
description = "Convert json to yaml and yaml to json from command line"
authors = [
    "Michael Holtzscher <mholtz@protonmail.com>",
    "Ivan Greene <ivan@ivan.sh>",
]
license = "MIT"
readme = "README.md"

repository = "https://github.com/mholtzscher/yjconv"
homepage = "https://github.com/mholtzscher/yjconv"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^18.3-alpha.4"
pytest = "^3.10"
pylint = "^2.1"
mypy = "^0.641.0"
pre-commit = "^1.12"
pytest-cov = "^2.6"
codecov = "^2.0"
pytest-azurepipelines = "^0.6.0"
bumpversion = "^0.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
